Fix scrolling issue on mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,7 +5,7 @@ body {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
-  contain: paint;
+  // contain: paint;
 }
 
 ::selection {
