--- a/src/components/DayleePage/DayleePage.module.scss
+++ b/src/components/DayleePage/DayleePage.module.scss
@@ -39,7 +39,7 @@
       top: -500px;
       left: 50%;
       transform: translate(-50%);
-      width: 500%;
+      width: 100vw;
       height: 120%;
       background: linear-gradient(
         180deg,
