--- a/src/components/home/Work/Work.module.scss
+++ b/src/components/home/Work/Work.module.scss
@@ -8,7 +8,7 @@
     top: 0;
     left: 50%;
     transform: translate(-50%);
-    width: 500%;
+    width: 100vw;
     height: 100%;
     background: linear-gradient(
       180deg,
